# SOEN-471

./: .gitignore  README.md
a1/: README.md  churn-classifiers.ipynb  data-preperation-and-EDA.ipynb  decision-tree.ipynb  main.ipynb  pyproject.toml
a1/data/: customer_churn.csv
a2/: Notes.md  README.md  analysis.ipynb  prof_example.ipynb  pyproject.toml  smartcart_starter_detailed.ipynb
a2/results/: part1_user_behavior_by_category.csv  part2_user_similarity_matrix.csv  part4_association_rules.csv  part4_frequent_itemsets.csv
